{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 8,
  "lineage": "21bf5c39-0842-4789-1c80-d06911c71f21",
  "resources": [
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "imported_igw",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "igw-0d8443ef15ea3bf64",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:internet-gateway/igw-0d8443ef15ea3bf64",
            "id": "igw-0d8443ef15ea3bf64",
            "owner_id": "637423584491",
            "tags": {
              "Name": "project-igw"
            },
            "tags_all": {
              "Name": "project-igw"
            },
            "vpc_id": "vpc-0e8104893617c26c7"
          }
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "imported_nat",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-06247d8c4c701c28b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcc961066c813222",
            "association_id": "eipassoc-066e3f300884962e5",
            "connectivity_type": "public",
            "id": "nat-06247d8c4c701c28b",
            "network_interface_id": "eni-022d2af4fcbbb5d54",
            "private_ip": "10.0.0.82",
            "public_ip": "34.195.188.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08f049e34c971ce41",
            "tags": {
              "Name": "project-nat-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "project-nat-public1-us-east-1a"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "imported_rt",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-038eca0edaec00082",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:route-table/rtb-038eca0edaec00082",
            "id": "rtb-038eca0edaec00082",
            "owner_id": "637423584491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8443ef15ea3bf64",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-rtb-public"
            },
            "tags_all": {
              "Name": "project-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8104893617c26c7"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "rtb-0da8e500237eed745",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:route-table/rtb-0da8e500237eed745",
            "id": "rtb-0da8e500237eed745",
            "owner_id": "637423584491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06247d8c4c701c28b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-rtb-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "project-rtb-private1-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8104893617c26c7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "imported_sg",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-07febebb2fa3c7ad4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:security-group/sg-07febebb2fa3c7ad4",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07febebb2fa3c7ad4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "637423584491",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8104893617c26c7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "imported_subnet",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-08f049e34c971ce41",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:subnet/subnet-08f049e34c971ce41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f049e34c971ce41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423584491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "project-subnet-public1-us-east-1a"
            },
            "vpc_id": "vpc-0e8104893617c26c7"
          }
        },
        {
          "index_key": "subnet-0b6a455a5c7d6b667",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:subnet/subnet-0b6a455a5c7d6b667",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6a455a5c7d6b667",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423584491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "project-subnet-private1-us-east-1a"
            },
            "vpc_id": "vpc-0e8104893617c26c7"
          }
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "imported_vpc",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-0e8104893617c26c7",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423584491:vpc/vpc-0e8104893617c26c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047052b93c3fcdd99",
            "default_route_table_id": "rtb-0b8805f44451f08a6",
            "default_security_group_id": "sg-07febebb2fa3c7ad4",
            "dhcp_options_id": "dopt-0b4582e7bce911cb8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8104893617c26c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8805f44451f08a6",
            "owner_id": "637423584491",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}